--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "YEAR AND PARTY TREE",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#2A0920",
+    "theme_color": "#2A0920",
     "description": "GDG Cloud Busan YEAR END PARTY Tree",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
