--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "YEAR AND PARTY TREE",
-    "short_name": "YEAR AND PARTY TREE",
+    "name": "YEAR END PARTY TREE",
+    "short_name": "YEAR END PARTY TREE",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#2A0920",
